--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,8 @@
-
 body {
   margin: 0;
-  font-family: Roboto, sans-serif;
+  font-family: Arial, sans-serif;
+}
+
+.bg-lightGrey {
+  background-color: #f5f5f5;
 }
